k8s/infra/auth/overlays/prod/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-depl
spec:
  template:
    spec:
      containers:
        - name: auth
          image: mdstaicu/auth
