k8s/infra/auth/overlays/prod/auth-ing.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: auth
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`tma.com`) && PathPrefix(`/api/v1/auth`)
      kind: Rule
      priority: 69
      middlewares:
        - name: auth-strip-prefix
      services:
        - name: auth-srv
          port: 3000
  tls:
    secretName: traefik-tls
    options:
      name: tls-options
      namespace: traefik
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: auth-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/v1/auth
